Fixed broken style

--- a/_attachments/style/layout.less
+++ b/_attachments/style/layout.less
@@ -57,7 +57,6 @@ a {
 .todo_title {
         /*font-size: 150%;*/
         font-weight: bold;
-        text-decoration: none;
 }
 
 span.tag {
